# little-log

./: CMakeLists.txt  Makefile  README.md  file_system_interface.h  logger.cpp  logger.h  real_file_system.cpp  real_file_system.h  test.cpp  test_logger.cpp
simple/: logger.cpp  logger.h
